Working on containerization.

--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,13 @@ dependencies {
     compile 'com.eclipsesource.minimal-json:minimal-json:0.9.4'
     compile 'org.slf4j:slf4j-simple:1.7.25'
     compile 'commons-cli:commons-cli:20040117.000000'
+    compile 'org.slf4j:slf4j-simple:1.7.21'
     shadow 'com.sparkjava:spark-core:2.7.1'
     shadow 'org.codehaus.janino:janino:3.0.8'
     shadow 'com.eclipsesource.minimal-json:minimal-json:0.9.4'
     shadow 'org.slf4j:slf4j-simple:1.7.25'
     shadow 'commons-cli:commons-cli:20040117.000000'
+    shadow 'org.slf4j:slf4j-simple:1.7.21'
     testCompile 'org.testng:testng:6.9.6'
 }
 
