--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,9 @@ dependencies {
 }
 
 checkstyle {
-    toolVersion "8.0"
+    toolVersion "8.7"
+    checkstyleTest.enabled = false
+    configFile = new File(rootDir, "config/checkstyle.xml")
 }
 
 test {
