Working on refactor.

--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,15 @@ dependencies {
     compile 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
     compile 'org.slf4j:slf4j-simple:1.7.25'
     compile 'commons-cli:commons-cli:20040117.000000'
+    compile 'com.google.code.gson:gson:2.8.5'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     shadow 'com.sparkjava:spark-core:2.7.1'
     shadow 'org.codehaus.janino:janino:3.0.8'
     shadow 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
     shadow 'org.slf4j:slf4j-simple:1.7.25'
     shadow 'commons-cli:commons-cli:20040117.000000'
+    shadow 'com.google.code.gson:gson:2.8.5'
     testCompile 'org.testng:testng:6.9.6'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 checkstyle {
