--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ buildscript {
 dependencies {
     compile 'com.sparkjava:spark-core:2.7.1'
     compile 'org.codehaus.janino:janino:3.0.8'
+    compile 'org.codehaus.janino:commons-compiler-jdk:3.0.8'
     compile 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
     compile 'org.slf4j:slf4j-simple:1.7.25'
     compile 'commons-cli:commons-cli:20040117.000000'
@@ -35,6 +36,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     shadow 'com.sparkjava:spark-core:2.7.1'
     shadow 'org.codehaus.janino:janino:3.0.8'
+    shadow 'org.codehaus.janino:commons-compiler-jdk:3.0.8'
     shadow 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
     shadow 'org.slf4j:slf4j-simple:1.7.25'
     shadow 'commons-cli:commons-cli:20040117.000000'
