--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,3 @@
-/*
- * For more details take a look at the Java Quickstart chapter in the Gradle
- * user guide available at https://docs.gradle.org/4.0.2/userguide/tutorial_java_projects.html
- */
-
 apply plugin: 'java'
 apply plugin: 'checkstyle'
 apply plugin: 'kotlin'
@@ -13,47 +8,44 @@ repositories {
 configurations {
     shadow
 }
-
 buildscript {
-    ext.kotlin_version = '1.2.51'
+    ext.kotlin_version = '1.3.0'
     repositories {
         jcenter()
-        maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://jitpack.io'
+        }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
-
 dependencies {
-    compile 'com.sparkjava:spark-core:2.7.1'
-    compile 'org.codehaus.janino:janino:3.0.8'
-    compile 'org.codehaus.janino:commons-compiler-jdk:3.0.8'
+    compile 'com.sparkjava:spark-core:2.8.0'
+    compile 'org.codehaus.janino:janino:3.0.10'
+    compile 'org.codehaus.janino:commons-compiler-jdk:3.0.10'
     compile 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
     compile 'org.slf4j:slf4j-simple:1.7.25'
     compile 'commons-cli:commons-cli:20040117.000000'
     compile 'com.google.code.gson:gson:2.8.5'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    shadow 'com.sparkjava:spark-core:2.7.1'
-    shadow 'org.codehaus.janino:janino:3.0.8'
-    shadow 'org.codehaus.janino:commons-compiler-jdk:3.0.8'
+    shadow 'com.sparkjava:spark-core:2.8.0'
+    shadow 'org.codehaus.janino:janino:3.0.10'
+    shadow 'org.codehaus.janino:commons-compiler-jdk:3.0.10'
     shadow 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
     shadow 'org.slf4j:slf4j-simple:1.7.25'
     shadow 'commons-cli:commons-cli:20040117.000000'
     shadow 'com.google.code.gson:gson:2.8.5'
     testCompile 'org.testng:testng:6.9.6'
 }
-
 checkstyle {
-    toolVersion "8.7"
+    toolVersion "8.12"
     checkstyleTest.enabled = false
     configFile = new File(rootDir, "config/checkstyle.xml")
 }
-
 test {
     useTestNG()
 }
-
 jar {
     from {
         configurations.shadow.collect {
@@ -66,9 +58,6 @@ jar {
         attributes 'Main-Class': 'WebServer'
     }
 }
-
-// vim: ts=4:sw=4:et:ft=groovy
-
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
@@ -79,3 +68,4 @@ compileTestKotlin {
         jvmTarget = "1.8"
     }
 }
+// vim: ts=4:sw=4:et:ft=groovy
